Fixed header bar wrapping [issue #8]
Not spectacular but a quick fix for <960px wide browsers.

--- a/hMixerApp/demo/css/main.css
+++ b/hMixerApp/demo/css/main.css
@@ -17,7 +17,7 @@
 *
 */
 
-body{ background: #f5f5f6; font-family: 'Vollkorn', serif; color: #9d9f9f; font-size: 15px; }
+body{ background: #f5f5f6; font-family: 'Vollkorn', serif; color: #9d9f9f; font-size: 15px; min-width: 960px; }
 
 div.no-vis{ 
     width: 0px; 
@@ -886,7 +886,7 @@ section.config article.demographics div.block span.daily_label{
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 1;
+  min-width: 960px;
 }
 
 .header .header-info {
@@ -914,6 +914,7 @@ section.config article.demographics div.block span.daily_label{
   padding: 0;
   position: fixed;
   width: 100%;
+  min-width: 960px;
 }
 
 .footer .demographics {
